--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,16 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@tabler/icons-react": "^3.34.1",
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.4",
     "date-fns": "^4.1.0",
+    "dotted-map": "^2.2.3",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.539.0",
+    "motion": "^12.23.12",
     "nanoid": "^5.1.5",
     "next": "15.4.6",
     "next-themes": "^0.4.6",
