--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "npx tsc -b && node ./dist/index.js",
+    "dev": "npx tsc -b && node ./dist/index.js",
     "build": "npx tsc -b",
     "start": "node ./dist/index.js"
   },
@@ -13,7 +13,11 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "@types/node": "^20.0.0"
+    "@types/node": "^20.0.0",
+    "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@types/ws": "^8.18.1",
+    "ws": "^8.18.3"
   }
 }
