--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@clerk/nextjs": "^6.31.4",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -17,7 +18,11 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-three/fiber": "^9.3.0",
+    "@react-three/postprocessing": "^3.0.4",
     "@tabler/icons-react": "^3.34.1",
     "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
@@ -26,16 +31,19 @@
     "date-fns": "^4.1.0",
     "dotted-map": "^2.2.3",
     "framer-motion": "^12.23.12",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
     "nanoid": "^5.1.5",
     "next": "15.4.6",
     "next-themes": "^0.4.6",
+    "postprocessing": "^6.37.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-use": "^17.6.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "three": "^0.179.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
