--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,17 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "prisma": "^6.14.0",
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@clerk/express": "^1.7.24",
+    "@prisma/client": "^6.14.0",
+    "@types/express": "^5.0.3",
     "@types/ws": "^8.18.1",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "socket.io": "^4.8.1",
     "ws": "^8.18.3"
   }
 }
