--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx tsc -b && node ./dist/index.js",
-    "build": "npx tsc -b",
+    "dev": "tsc -b && node ./dist/index.js",
+    "build": "tsc -b",
     "start": "node ./dist/index.js"
   },
   "keywords": [],
@@ -20,11 +20,14 @@
   "dependencies": {
     "@clerk/express": "^1.7.24",
     "@prisma/client": "^6.14.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/ws": "^8.18.1",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "socket.io": "^4.8.1",
+    "svix": "^1.75.0",
     "ws": "^8.18.3"
   }
 }
