--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsc -b && node ./dist/index.js",
-    "build": "tsc -b",
+    "build": "npm i && tsc -b",
     "start": "node ./dist/index.js"
   },
   "keywords": [],
