feat: Implemented Chat Logic

--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "nanoid": "^5.1.5",
     "socket.io": "^4.8.1",
     "svix": "^1.75.0",
     "ws": "^8.18.3"
