--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsc -b && node ./dist/index.js",
     "build": "npm i && npx prisma generate && tsc -b",
-    "start": "node ./dist/index.js"
+    "start": "node ./dist/index.js",
+    "prisma:seed": "node ./dist/prisma/seed.js"
+  },
+  "prisma": {
+    "seed": "node ./dist/prisma/seed.js"
   },
   "keywords": [],
   "author": "",
@@ -25,7 +29,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "nanoid": "^5.1.5",
+    "nanoid": "^3.3.4",
     "socket.io": "^4.8.1",
     "svix": "^1.75.0",
     "ws": "^8.18.3"
